--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,20 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400;1,500;1,600;1,700&family=Nuosu+SIL&display=swap"
+    rel="stylesheet">
+
+  <style>
+    @font-face {
+      font-family: Typewriter;
+      src: url('type.ttf');
+    }
+  </style>
+
+
   <title>Statement Automate</title>
 
 </head>
