--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,11 @@
       font-family: Typewriter;
       src: url('type.ttf');
     }
+
+    @font-face {
+      font-family: tymesroman;
+      src: url('times-ro.ttf');
+    }
   </style>
 
 
