ucb bank statement added

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,11 @@
       font-family: tymesroman;
       src: url('times-ro.ttf');
     }
+
+    @font-face {
+      font-family: lora;
+      src: url('lora.ttf');
+    }
   </style>
 
 
